Creates quoted api in express.js
