# swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: MEN REST API
-  description: MongoDB ExpressJS NodeJS REST API
+  description: Qouted API Documentation
   version: 1.0.0
 servers:
   - url: http://localhost:4000/api/
@@ -16,7 +16,7 @@ components:
       name: auth-token
 
   schemas:
-    Product:
+    Quote:
       type: object
       properties:
         id:
@@ -98,23 +98,23 @@ paths:
                     type: string
 
 
-  /products:
+  /quotes:
     get:
-      summary: Retrieves a list of Products
-      description: Retrieves a list of products as JSON objects.
+      summary: Retrieves a list of quotes
+      description: Retrieves a list of quotes as JSON objects.
       responses:
         200:
-          description: A list of product JSON objects in an array.
+          description: A list of quote JSON objects in an array.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Product"
+                  $ref: "#/components/schemas/Quote"
     
     post:
-      summary: Create a new Product
-      description: Create a new Product
+      summary: Create a new Quote
+      description: Create a new Quote
       security:
         - ApiKeyAuth: []      
       requestBody:
@@ -122,20 +122,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Product"
+              $ref: "#/components/schemas/Quote"
 
       responses:
         201:
-          description: Product created succesfully
+          description: Quote created succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Product"
+                $ref: "#/components/schemas/Quote"
   
-  /products/{id}:
+  /quotes/{id}:
     get:
-      summary: Specific Product
-      description: Retrieves a specific Product based on it id.
+      summary: Specific Quote
+      description: Retrieves a specific Quote based on it id.
       parameters:
         - in: path
           name: id
@@ -145,17 +145,17 @@ paths:
             type: string
       responses:
         200:
-          description: A Product in the format of a JSON object.
+          description: A Quote in the format of a JSON object.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Product"
+                  $ref: "#/components/schemas/Quote"
    
     put:
-      summary: Updates a specific Product
-      description: Updates a specific Product based on it id
+      summary: Updates a specific Quote
+      description: Updates a specific Quote based on it's id
       security:
         - ApiKeyAuth: []            
       parameters:
@@ -170,19 +170,19 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Product"
+              $ref: "#/components/schemas/Quote"
 
       responses:
         201:
-          description: Product updated succesfully
+          description: Quote updated succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Product"
+                $ref: "#/components/schemas/Quote"
 
     delete:
-      summary: Deletes a specific Product
-      description: Deletes a specific Product based on it id
+      summary: Deletes a specific Quote
+      description: Deletes a specific Quote based on it id
       security:
         - ApiKeyAuth: []            
       parameters:
@@ -195,8 +195,8 @@ paths:
 
       responses:
         201:
-          description: Product deleted succesfully
+          description: Quote deleted succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Product"
+                $ref: "#/components/schemas/Quote"
